# ipython-copy

./: .copier-answers.yml  CHANGELOG.md  Justfile  README.md  osc_test.py  pyproject.toml  research.md  scaffold.py
ipython_copy/: __init__.py  ipython_clipboard.py
tests/: test_clipboard.py  test_import.py
