[project]
name = "ipython-copy"
version = "0.1.0"
description = "IPython magic commands to copy text, variables, and history to your system clipboard."
keywords = ["ipython", "clipboard", "repl", "osc52"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pyperclip", "ipython"]
authors = [{ name = "Michael Bianco", email = "mike@mikebian.co" }]
urls = { "Repository" = "https://github.com/iloveitaly/ipython-copy" }

# additional packaging information: https://packaging.python.org/en/latest/specifications/core-metadata/#license

[build-system]
requires = ["uv_build>=0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# avoids the src/ directory structure
module-root = ""


[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pyright[nodejs]>=1.1.408",
    "ruff>=0.15.0",
    "coverage>=7.13.4",
    "pytest-cov>=7.0.0",
    "covdefaults>=2.3.0",
]

# enables copy to clipboard in remote sessions / anywhere
[tool.uv.sources.pyperclip]
git = "https://github.com/iloveitaly/pyperclip.git"
rev = "feat-osc52-fallback"

[tool.pyright]
exclude = ["examples/", "playground/", "tmp/", ".venv/", "tests/"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing --cov-report=html:tmp/htmlcov"

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["ipython_copy"]

[tool.coverage.report]
fail_under = 50

[tool.ruff]
extend-exclude = ["playground.py", "playground/"]
